--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 /* Color Styles */
+/* This selects a div element with a class that's name starts with "child" */
 div[class^="child"] {
     padding: 0 10px;
 }
@@ -19,38 +20,5 @@ div[class^="child"] {
 }
 
 /* FLEXBOX STYLES */
-.parent {
-    display: flex;
-}
-
-.child {
-    flex: 0 1 auto;
-}
-
-.child2 {
-    flex: 0 1 auto;
-}
-
-.child3 {
-    flex: 1 1 auto;
-}
-
-.child4 {
-    flex: 1 1 auto;
-}
-
-.child5 {
-    flex: 2 1 auto;
-}
-
-.child6 {
-    flex: 1 1 auto;
-}
-
-.child7 {
-    flex: 1 1 auto;
-}
-
-.child8 {
-    flex: 2 1 auto;
-}
+/* Add the flexbox styles below.
+You do NOT need to touch the styles above this */
